# mongofitness-sync

./: README.md  main.py  pyproject.toml
mdbfit/: __init__.py  api.py  utils.py
tests/: test_polar.py
